# getbibtex

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  test.yml
src/: conftest.py
src/getbibtex/: __init__.py  bibtex.py  journalnames.py
src/getbibtex/backends/: __init__.py  arxiv.py  crossref.py
tests/: test_arxiv.py  test_autoprotect.py  test_citekey.py  test_crossref.py  test_getbibtex.py  test_regexes.py
